--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "lodash": "^4.17.21",
     "node-sass": "^4.13.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.3",
+    "uuid": "^8.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
