--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/entity": "^11.1.0",
+    "@ngrx/router-store": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
     "lodash": "^4.17.21",
     "node-sass": "^4.13.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.3",
-    "uuid": "^8.2.0",
     "rxjs": "~6.6.0",
+    "secure-ls": "^1.2.6",
     "tslib": "^2.0.0",
+    "uuid": "^8.2.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
