--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store": "^11.0.1",
     "@ngrx/store-devtools": "^11.0.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "ngx-file-drop": "^11.0.2",
     "node-sass": "^4.13.1",
     "primeicons": "^4.1.0",
