--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "ngx-file-drop": "^11.0.2",
+    "ngx-pagination": "^5.1.1",
     "node-sass": "^4.13.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.3",
@@ -43,9 +44,9 @@
     "@angular-devkit/build-angular": "~0.1001.6",
     "@angular/cli": "~10.1.6",
     "@angular/compiler-cli": "~10.1.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
